--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server = YPSLAPTOP\\SQLSERVER;initial catalog=Mossad; user id=sa; password=1234;TrustServerCertificate=Yes"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
